# outlook-desktop-mcp

./: README.md  pyproject.toml
.github/workflows/: publish.yml
src/outlook_desktop_mcp/: server.py
src/outlook_desktop_mcp/utils/: formatting.py
