[project]
name = "outlook-desktop-mcp-encoding"
version = "0.3.7"
description = "Fork of outlook-desktop-mcp with encoding fixes"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "rhdms0327" },
]
keywords = ["mcp", "outlook", "email", "com", "automation", "windows", "microsoft", "claude"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Win32 (MS Windows)",
    "Intended Audience :: Developers",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Email",
    "Topic :: Office/Business :: Office Suites",
]
dependencies = [
    "pywin32>=310",
    "mcp[cli]>=1.26.0",
]

[project.urls]
Homepage = "https://github.com/rhdms0327/outlook-desktop-mcp-encoding"
Repository = "https://github.com/rhdms0327/outlook-desktop-mcp-encoding"
Issues = "https://github.com/rhdms0327/outlook-desktop-mcp-encoding/issues"

[project.scripts]
outlook-desktop-mcp-encoding = "outlook_desktop_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/outlook_desktop_mcp"]
